--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agendanextfire",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "scripts": {
     "dev": "next dev",
